--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src=" https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js "></script>
-    <script src="dist/brickcms.min.js"></script>
-    <script>
-      BrickCms.load(jQuery);
-    </script>
+    <script src="dist/brickcms.js"></script>
 </body>
 
 </html>
